--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@supabase/supabase-js": "^2.86.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "bcryptjs": "^3.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jose": "^5.0.0",
+    "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "openai": "^6.9.1",
     "react": "19.2.0",
@@ -21,7 +24,8 @@
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
     "rehype-highlight": "^7.0.2",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "shadcn-ui": "^0.9.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
